-bug#0002274: Graph template ucd/net - Memory Usage has incorrect base value
-bug#0002280: meta http-equiv=refresh content in lib/graph_export.php contains to many apostrophes (more findings apply)
-bug#0002298: filtering/highlighting of data sources is broken
-bug#0002305: plugin.php requires PLUGINNAME_version to work
-bug#0002326: Undefined index: Unknown in utilities.php on line 310
-bug: avoid PHP "pass by reference" error for ping function
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: allow empty [upper|lower]_limit even without autoscaling
-bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
-bug: when changing a data template, "suggested name" title of data sources are unconditionally overwritten
-feature#0000475: Add RRDTool options currently not settable within Cacti
-feature#0000726: add VDEF support
-feature#0000954: implement --alt-y-grid graph option
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001343: Add TEXTALIGN functionality to graph templates
-feature#0001371: Support for LINE:STACK, was: Stacked LINE
-feature#0001418: changing the graph backround via graph templates
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature#0001450: Template import script
-feature#0001457: Support for rrdtool graph options, was: Extra settings field in graph template
-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001536: small patch to allow plugins to change the x-axis labels
-feature#0001550: Record the polling time for each host to optimize polling times